# showcases

go/1bnrow/: README.md  go.mod  initial_attempt.go  main.go  second_attempt.go
go/1bnrow/orchestrator/: README.md  example_data.txt  orchestrator.go  orchestrator_test.go  source.go  source_test.go
go/simple-web-backend/: go.mod  main.go
go/simple-web-backend/http/: http.go
go/simple-web-backend/logging/: logLevel.go
go/simple-web-backend/site/: 404.html
go/simple-web-backend/typed-errors/: typed-errors.go
go/simple-web-backend/utils/: zero-alloc-conversions.go
go/writing-an-interpreter/: go.mod
go/writing-an-interpreter/token/: token.go
misc/TCP-IP-Illustrated/vol-1/: chapter1.md
node/binary-message-parser/: README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts
node/binary-message-parser/src/: index.ts
rust/blewis/: CONSIDERATIONS.md  Cargo.toml  GUIDELINES.md  PROTO.md  README.md
rust/blewis/src/: command.rs  command_interpreter.rs  data_type.rs  decoder.rs  errors.rs  main.rs  network.rs  store.rs
rust/blewis/src/command_interpreter/: command_interpreter.rs  commands.rs
rust/blewis/src/decoder/: decoder.rs
rust/blewis/src/network/: interface.rs  tcp.rs  tcp_cnx.rs
simple-web-backend/: README.md  go.mod  main.go  server.key  server.pem
simple-web-backend/http/: http.go
simple-web-backend/logger/: log.go  logLevel.go
simple-web-backend/logging/: log.go
simple-web-backend/site/: index.html
simple-web-backend/typed-errors/: typed-errors.go
simple-web-backend/utils/: zero-alloc-conversions.go
(+21 files in other folders)
