[package]
name = "blewis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
dashmap = { version = "5.5.3", features = ["inline"] }
ordered-float = "4.2.0"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["net", "fs", "macros", "rt", "full"] }

# [build]
# rustflags = ["-C", "target-cpu=native"]

[profile.release]
codegen-units = 1
lto = "fat"
